@@ -1,5 +1,6 @@
-2020-10-21 (12.20)
+2020-10-27 (12.20)
 	COMMON: add support for inline assignment of export variables
+	COMMON: add support for unit alias names
 
 2020-10-21 (12.20)
 	ANDROID: upgrade to target android 29
